Fixing text wrap issues on Next/Prev chapter nav

--- a/css/style.scss
+++ b/css/style.scss
@@ -1105,7 +1105,8 @@ div.tutorial
 
 			.text
 			{
-				width: 70%;
+				display: block;
+    		overflow: hidden;
 			}
 
 			a:hover span.glyphicon
